2022-10-18  Jim Fowler  <jrf@biblion>

	* Docs/Hjs/catalogue_xml.py: removed extra carriage returns.
	Moved year to publisher line, added spaces if no year string.
	Moved comma after author/editor from LaTeX command to string
	(sort_bookfile): Added bookfile.sort() now that we can sort.

2022-06-25  Jim Fowler  <jrf@biblion>

	* Docs/Hjs/catalogue_xml.py (print_entry): Added additional
	error checking when parsing entry.

2022-06-23  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Add entry count to
	final output.

	* Tools/python/aabooks/lib/headerwindow.py (HeaderWindow):
	Cleaned up code for python 3.9 and added test for None in
	save_header_text()

	* Docs/Hjs/catalogue_xml.py (get_author_string): Added multiple
	author/editors to catalogue.  Also added comments.

2022-06-21  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Corrected test for
	args.count for ending the testing

2022-06-18  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/headerwindow.py
	(HeaderWindow.ask_and_close): Corrected spelling mistake for
	no_save_close() in the switch after the dialog box.

2022-06-11  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/jsearch.py
	(JournalSearch.__init__): Correct slot _new_entry() to new_entry()
2022-06-06  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/bookfile.py: Added
	BookFile.sort_by() function as a wrapper around sort().
	This way I don't have to specify the lambda function for
	the key every time.

2022-06-05  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/ajbentry.py: Sort by names
	sort of works but has difficulty with Unicode chars.

2022-06-03  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/bookfile.py: Added a test for
	the Bookfile sort function.  Sort by 'Year' work.  Need to
	refine the test for all sort fields.

	* Tools/python/aabooks/ajbbook/ajbentry.py (AJBentry.sort_key): Add
	the sort_key() function. This should allow a BookFile object